<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_object"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="heig.labo2.object.ObjectActivity">

    <Button
        android:text="@string/sendAsJson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:id="@+id/jsonButton"
        android:layout_alignBaseline="@+id/xmlButton"
        android:layout_alignBottom="@+id/xmlButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="10sp" />

    <TextView
        android:text="@string/xmlResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jsonResponse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:id="@+id/xmlResponse" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstname"
        android:hint="@string/firstname"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:textSize="14sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/middlename"
        android:hint="@string/middlename"
        android:layout_below="@+id/firstname"
        android:layout_alignLeft="@+id/firstname"
        android:layout_alignStart="@+id/firstname"
        android:textSize="14sp" />

    <TextView
        android:text="@string/jsonResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/jsonResponse"
        android:layout_below="@+id/jsonButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:textSize="12sp" />

    <Button
        android:text="@string/sendAsXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xmlButton"
        android:textSize="10sp"
        android:layout_below="@+id/phone"
        android:layout_toLeftOf="@+id/gender"
        android:layout_toStartOf="@+id/gender" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middlename"
        android:layout_alignRight="@+id/phone"
        android:layout_alignEnd="@+id/phone">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/neither"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="12sp" />

    </RadioGroup>
</RelativeLayout>
