<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="heig.labo2.Dashboard">

    <Button
        android:text="@string/compressedActivityName"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:id="@+id/compressedButton" />

    <Button
        android:text="@string/asynchronousActivityName"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/asyncButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp" />

    <Button
        android:text="@string/storeAndForwardActivityName"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/asyncButton"
        android:layout_alignLeft="@+id/asyncButton"
        android:layout_alignStart="@+id/asyncButton"
        android:layout_marginTop="43dp"
        android:id="@+id/storeAndForwardButton"
        android:layout_alignRight="@+id/asyncButton"
        android:layout_alignEnd="@+id/asyncButton" />

    <Button
        android:text="@string/objectActivityName"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/storeAndForwardButton"
        android:layout_alignLeft="@+id/compressedButton"
        android:layout_alignStart="@+id/compressedButton"
        android:id="@+id/objectButton"
        android:layout_alignRight="@+id/compressedButton"
        android:layout_alignEnd="@+id/compressedButton" />
</RelativeLayout>
