<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_async2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="heig.labo2.async.AsyncActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/requestText"
        android:hint="@string/async_input" />

    <TextView
        android:text="@string/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/requestText"
        android:layout_alignLeft="@+id/requestText"
        android:layout_alignStart="@+id/requestText"
        android:layout_marginTop="111dp"
        android:id="@+id/responseText"
        android:layout_alignRight="@+id/requestText"
        android:layout_alignEnd="@+id/requestText" />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/requestText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/sendButton" />
</RelativeLayout>
